New changes in game home scren

--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 <!-- credit section start  -->
 <div class="contact">
   <h2>Made With 💓 by</h2>
-  <a href="https://twitter.com/Sanskari_Rushi">@Sanskari_Rushi <img src="./assets/twitter2.avif" alt=""></a>
-  <a href="https://www.linkedin.com/in/nikhil-ambure-8a41a7248/">Nikhil Ambure <img src="./assets/linkedin2.png" alt=""></a>
-  <a href="https://www.linkedin.com/in/maaj-shaikh-a69025221/">Maaj Shaikh <img src="./assets/linkedin2.png" alt=""></a>
-  <a href="https://www.linkedin.com/in/shubham-gade-patil-a79905256/">Shubham Gade <img src="./assets/linkedin2.png" alt=""></a>
+  <a href="https://twitter.com/Sanskari_Rushi">Rushikesh Pawar<img src="./assets/twitter2.avif" alt=""></a>
 </div>
 
       </div>
